test/tests/stages/9_functions/valid/arguments_in_registers/forward_decl_multi_arg.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: foo
        List[2]: 
          TIdentifier: a
          TIdentifier: b
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[2]: 
            Int: 
            Int: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CFunctionCall: 
                  TIdentifier: foo
                  List[2]: 
                    CConstant: 
                      CConstInt: 
                        TInt: 2
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: foo
        List[2]: 
          TIdentifier: x
          TIdentifier: y
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CBinary: 
                  CSubtract: 
                  CVar: 
                    TIdentifier: x
                    None: 
                  CVar: 
                    TIdentifier: y
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[2]: 
            Int: 
            Int: 
          Int: 
        None: 
